# roblox

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  START.bat  THIRD_PARTY_NOTICES.md  deny.toml  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  suggestion.yml
.github/workflows/: ci.yml  release.yml
apps/daemon/: Cargo.toml
apps/daemon/src/: legacy_service.rs  main.rs  quest_scan.rs
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-capability.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  lib.rs  main.rs
apps/desktop/src/components/: CompactMonitor.tsx  OnboardingDialog.test.tsx  OnboardingDialog.tsx  RunControls.test.tsx  RunControls.tsx  Sidebar.tsx  StatusPill.tsx  TopBar.tsx  brand.tsx
apps/desktop/src/hooks/: useNectarPilot.ts  useTheme.ts
apps/desktop/src/pages/: AboutPage.tsx  DiagnosticsPage.test.tsx  DiagnosticsPage.tsx  ExtensionsPage.test.tsx  ExtensionsPage.tsx  FeaturePage.test.tsx  FeaturePage.tsx  GatherPage.test.tsx  GatherPage.tsx  MonitoringPage.test.tsx  MonitoringPage.tsx  OverviewPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx
apps/desktop/src/services/: nectar-service.test.ts  nectar-service.ts  seed.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/types/: contracts.test.ts  contracts.ts
assets/detectors/: _legacy-manifest.yaml
assets/legacy-support/: _legacy-manifest.yaml
assets/patterns/: _legacy-manifest.yaml  stationary.nectar.yaml
assets/quests/: black-bear.v1.json  bucko-bee.v1.json  polar-bear.v1.json  riley-bee.v1.json  science-bear.v1.json
assets/routes/: _legacy-manifest.yaml
crates/nectarpilot-contracts/: Cargo.toml
crates/nectarpilot-contracts/bindings/: generated.ts
crates/nectarpilot-contracts/src/: bindings.rs  detection.rs  lib.rs  profile.rs  protocol.rs
crates/nectarpilot-core/: Cargo.toml
crates/nectarpilot-core/src/: crash_guard.rs  dsl.rs  engine.rs  legacy_ini.rs  lib.rs  perception.rs  persistence.rs  quests.rs  reconnect.rs  scheduler.rs  session.rs  tasks.rs  transport.rs
crates/nectarpilot-legacy/: Cargo.toml
crates/nectarpilot-legacy/src/: bulk.rs  converter.rs  detectors.rs  harness.rs  lib.rs  runner.rs  support.rs
crates/nectarpilot-legacy/support/: route_context.ahk
crates/nectarpilot-platform/: Cargo.toml
crates/nectarpilot-platform/src/: capture.rs  diagnostics.rs  emergency.rs  freeze.rs  hotkeys.rs  input.rs  job.rs  lib.rs  perception.rs  pipe.rs  process.rs  secrets.rs  session.rs  task_executor.rs  windows_backend.rs
crates/nectarpilot-platform/tests/: perception_fixtures.rs  reader_fixtures.rs
crates/nectarpilot-platform/tests/fixtures/: perception-fixture.json
docs/: ARCHITECTURE.md  LEGACY_COMPATIBILITY.md  LIVE_TEST_PROTOCOL.md  PARITY_MATRIX.md  QUEST_INTELLIGENCE.md  RELEASE.md  SECURITY.md  soak-result.schema.json
scripts/: complete-soak.ps1  generate-installer-art.mjs  generate-sbom.ps1  package-portable.ps1  prepare-daemon-sidecar.ps1  start-soak.ps1  verify-no-secrets.ps1  verify-packaged-legacy-layout.ps1  verify-parity-fixtures.ps1  verify-release-gate.ps1
tests/fixtures/: README.md  parity-index.json
