[package]
name = "nectarpilot-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
nectarpilot-contracts = { path = "../../crates/nectarpilot-contracts" }
nectarpilot-core = { path = "../../crates/nectarpilot-core" }
nectarpilot-platform = { path = "../../crates/nectarpilot-platform" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
