[package]
name = "nectarpilot-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
nectarpilot-contracts = { path = "../../crates/nectarpilot-contracts", version = "=0.1.0" }
nectarpilot-core = { path = "../../crates/nectarpilot-core", version = "=0.1.0" }
nectarpilot-platform = { path = "../../crates/nectarpilot-platform", version = "=0.1.0" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
