[package]
name = "nectarpilot-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
nectarpilot-contracts = { path = "../../crates/nectarpilot-contracts", version = "=0.1.0" }
nectarpilot-core = { path = "../../crates/nectarpilot-core", version = "=0.1.0" }
nectarpilot-legacy = { path = "../../crates/nectarpilot-legacy", version = "=0.1.0" }
nectarpilot-platform = { path = "../../crates/nectarpilot-platform", version = "=0.1.0" }
serde_yaml.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
