[package]
name = "nectarpilot-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
specta = { workspace = true, features = ["serde_json"] }
specta-typescript = "0.0.9"
uuid.workspace = true

[lints]
workspace = true
