[package]
name = "nectarpilot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
nectarpilot-contracts = { path = "../nectarpilot-contracts", version = "=0.1.0" }
parking_lot.workspace = true
rusqlite = { workspace = true, features = ["backup"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
