[package]
name = "nectarpilot-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "nectarpilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nectarpilot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
nectarpilot-contracts = { path = "../../../crates/nectarpilot-contracts" }
nectarpilot-core = { path = "../../../crates/nectarpilot-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
